examples/test/testpolicy19966.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19966
  namespace: namespace179
spec:
  podSelector:
    matchLabels:
      key20: value25
      key12: value47
      key32: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value11
      podSelector:
        matchLabels:
          key32: value17
          key48: value8
          key13: value32
